2006-03-08   Christian Stimming <stimming@tuhh.de>

	* src/core-utils/gnc-gconf-utils.c,
	src/business/business-gnome/business-urls.c
	src/gnome-utils/dialog-preferences.c
	src/gnome-utils/gnc-currency-edit.c
	src/gnome-utils/gnc-plugin-file-history.c
	src/gnome-utils/gnc-main-window.c
	src/gnome-utils/dialog-reset-warnings.c
	src/gnome-utils/gnc-tree-view.c src/gnome/window-reconcile.c
	src/app-utils/file-utils.c src/app-utils/gnc-ui-util.c : Replace
	index(3) by strchr(3) and rindex(3) by strrchr(3) because the
	latter is more widely available.

2006-03-07  David Hampton  <hampton@employees.org>

	* src/gnome-utils/gnc-splash.c: Use a font size of "smaller" when
	printing to the splash screen. Should solve 104436 except for
	people running with huge system fonts.

	* src/gnome-utils/gnc-tree-view-account.[ch]: Relabel column
	titles from "XXX (Report)" to a label that includes the currency
	mnemonic (e.g. "Total (EUR)"). Closes 118695.

	* src/app-utils/gnc-ui-util.c:
	* src/engine/gnc-hooks.[ch]: Cache the result of a gconf lookup
	for a currency choice.  Add a new callback hook for when a user
	changes a currency setting (default account or report).

	* src/register/register-gnome/combocell-gnome.c:
	* src/register/register-gnome/gnucash-item-list.[ch]:
	* src/register/register-gnome/gnucash-item-edit.[ch]:
	* src/register/ledger-core/gnc-ledger-display.c:
	* src/register/ledger-core/split-register.h:
	* src/register/ledger-core/split-register-load.c:
	* src/register/register-core/combocell.h:
	* src/gnome-utils/account-quickfill.[ch]: The account quickfill
	has multiple components to it, only one of which was shared. Build
	and use a shared list store used by the gnucash_item_edit
	widget (which is updated by signals sent when accounts are
	added/deleted/modified.)  With this in place, its not necessary to
	rebuild two account quickfills for each open register window when
	a gnc_gui_resume_refresh is called which eliminates an O(2n)